Fix horizontal scroll bug

--- a/global-styles/_heros.scss
+++ b/global-styles/_heros.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 100vw;
+  width: 100%;
   &.top-left-pin {
     background-position: top left;
   }
